--- a/dossier2/style1.css
+++ b/dossier2/style1.css
@@ -386,6 +386,68 @@ input[type='submit'] {
 }
 
 
+/*----------------ajoute ----------------------------*/
+
+nav .mainMenu li a {
+    display: inline-block;
+    text-decoration: none;
+}
+
+nav .mainMenu {
+    display: flex;
+    list-style: none;
+}
+
+nav .openMenu {
+    font-size: 2rem;
+    margin: 20px;
+    display: none;
+    cursor: pointer;
+}
+
+nav .mainMenu .closeMenu,
+.icons i {
+    font-size: 2rem;
+    display: none;
+    cursor: pointer;
+}
+
+@media(max-width: 800px) {
+    nav .mainMenu {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #000;
+        transition: top 1s ease;
+        display: none;
+    }
+    nav .mainMenu .closeMenu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+    nav .openMenu {
+        display: block;
+    }
+    nav .mainMenu li a:hover {
+        background: none;
+        color: rgb(255, 123, 0);
+        font-size: 1.6rem;
+    }
+    .icons i {
+        display: inline-block;
+        padding: 12px;
+    }
+}
+
+
 /* main */
 
 .content {
@@ -685,96 +747,3 @@ ul.menu {
 
 
 /*--------------menu burger...............*/
-
-.header-top {
-    background: #000;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-}
-
-.header-top .mainMenu {
-    display: flex;
-    list-style: none;
-}
-
-.header-top,
-.mainMenu,
-a {
-    display: inline-block;
-    padding: 15px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 1.5rem;
-}
-
-.header-top,
-.mainMenu,
-a:hover {
-    background: rgb(255, 94, 0);
-}
-
-.header-top,
-.openMenu {
-    font-size: 2rem;
-    margin: 20px;
-    display: none;
-    cursor: pointer;
-}
-
-.header-top,
-.mainMenu .closeMenu,
-.icons i {
-    font-size: 2rem;
-    display: none;
-    cursor: pointer;
-}
-
-.header-top,
-.logo {
-    margin: 6px;
-    font-size: 25px;
-    cursor: pointer;
-}
-
-@media(max-width: 800px) {
-    .header-top,
-    .mainMenu {
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 10;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        /* background: #000; */
-        transition: top 1s ease;
-        display: none;
-    }
-    .header-top,
-    .mainMenu,
-    .closeMenu {
-        display: block;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-    }
-    .header-top,
-    .openMenu {
-        display: block;
-    }
-    .header-top,
-    .mainMenu,
-    a:hover {
-        background: none;
-        color: rgb(255, 123, 0);
-        font-size: 1.6rem;
-    }
-    .icons i {
-        display: inline-block;
-        padding: 12px;
-    }
-}
